Fix header links horizontal alignment with logo

--- a/blocks/header/__language-list/header__language-list.css
+++ b/blocks/header/__language-list/header__language-list.css
@@ -1,3 +1,4 @@
 .header__language-list {
   display: flex;
+  margin: 0;
 }
